force-app/main/default/objects/cgcloud__Tactic_Template_Fund_Template__c/cgcloud__Tactic_Template_Fund_Template__c.object-meta.xml
<CustomObject>
    <description>Junction object between tactic template and fund template. This object defines the valid fund types for the given tactic template.</description>
    <label>Tactic Template Fund Template</label>
    <nameField>
        <displayFormat>TTFT-{0000000}</displayFormat>
        <label>Tactic Fund Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tactic Templates Fund Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>