force-app/main/default/objects/cgcloud__Tactic_Template_Fund_Template__c/fields/cgcloud__Default__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the current fund template is the default fund type for a tactic template. For each tactic template only one default fund type may exist.</description>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>