force-app/main/default/objects/cgcloud__Tactic_Template_Fund_Template__c/fields/cgcloud__Fund_Template__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Fund_Template__c</fullName>
    <label>Fund Template</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1</booleanFilter>
        <filterItems>
            <field>cgcloud__Fund_Template__c.cgcloud__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>cgcloud__Fund_Template__c</referenceTo>
    <relationshipLabel>Tactic Templates</relationshipLabel>
    <relationshipName>Tactic_Fund_Template</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>