force-app/main/default/objects/cgcloud__Tactic_Template_Fund_Template__c/fields/cgcloud__Tactic_Template__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Tactic_Template__c</fullName>
    <description>Automatic Tactic Fund Assignment</description>
    <label>Tactic Template</label>
    <referenceTo>cgcloud__Tactic_Template__c</referenceTo>
    <relationshipLabel>Fund Templates</relationshipLabel>
    <relationshipName>Tactic_Fund_Template</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>