force-app/main/default/objects/cgcloud__Tactic_Template_Fund_Template__c/validationRules/cgcloud__Sales_Org_Mismatch.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Sales_Org_Mismatch</fullName>
    <active>true</active>
    <description>The tactic template and the fund template must have the same Sales Org.</description>
    <errorConditionFormula>TEXT(cgcloud__Tactic_Template__r.cgcloud__Sales_Org__c) &lt;&gt; TEXT(cgcloud__Fund_Template__r.cgcloud__Sales_Org__c)</errorConditionFormula>
    <errorMessage>The tactic template and the fund template must have the same Sales Org.</errorMessage>
</ValidationRule>